--- a/css/style.css
+++ b/css/style.css
@@ -511,8 +511,8 @@ input:focus {
     width: 100%;
     max-width: 865px;
     bottom: 70px;
-    background-color: #666565;
-    /* background-color: none; */
+    /* background-color: #666565; */
+    background-color: none;
     right: 1000%;
     padding: 10px;
     z-index: 10;
