--- a/css/style.css
+++ b/css/style.css
@@ -507,7 +507,7 @@ input:focus {
 
 /* player */
 .player {
-    position: absolute;
+    position: relative;
     bottom: 0;
     width: 100%;
     background-color: #202020;
